Applied eligrey/FileSaver.js/pull/131

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "type": "git",
     "url": "https://github.com/carlos-algms/FileSaver.js"
   },
-  "author": "Carlos Gomes",
+  "author": "Carlos A. Gomes",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/carlos-algms/FileSaver.js/issues"
