Applied eligrey/FileSaver.js/pull/140

--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,8 @@
   "license": "MIT",
   "ignore": [
     "**/.*",
+    "!FileSaver.js",
+    "!FileSaver.min.js",
     "node_modules",
     "bower_components",
     "test",
