--- a/package.json
+++ b/package.json
@@ -12,5 +12,12 @@
   "bugs": {
     "url": "https://github.com/carlos-algms/FileSaver.js/issues"
   },
-  "homepage": "https://github.com/carlos-algms/FileSaver.js"
+  "homepage": "https://github.com/carlos-algms/FileSaver.js",
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "^0.11.2",
+    "grunt-contrib-uglify": "^0.9.1",
+    "load-grunt-tasks": "^3.2.0",
+    "time-grunt": "^1.2.1"
+  }
 }
