--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-uglify": "^0.9.1",
+    "jshint-stylish": "^2.0.1",
     "load-grunt-tasks": "^3.2.0",
     "time-grunt": "^1.2.1"
   }
