--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
   "name": "file-saver.js",
   "main": "FileSaver.js",
-  "version": "1.20150507.2",
-  "homepage": "https://github.com/Teleborder/FileSaver.js",
+  "version": "v1.20151216.3",
+  "homepage": "https://github.com/bourdux/FileSaver.js",
   "authors": [
     "Eli Grey (http://eligrey.com)"
   ],
