--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "author": "Eli Grey",
   "license": "MIT/X11",
   "homepage": "https://github.com/verkkokauppacom/FileSaver.js",
+  "scripts": {
+      "build": "uglifyjs FileSaver.js --mangle --comments /@source/ > FileSaver.min.js"
+  },
   "devDependencies": {
     "uglifyjs": "^2.4.10"
   }
